--- a/application/templates/play_game.html
+++ b/application/templates/play_game.html
@@ -14,17 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body background="{{ url_for('static', filename='background_score_list.png') }}">
-    <header class="d-flex flex-wrap justify-content-center mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-          <img src="{{ url_for('static', filename='website_name_otherpage.png') }}">
-        </a>
-        <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page"><img src="{{ url_for('static', filename='navigation/puzzle.PNG') }}" style="width:200px;height:50px;"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/score.PNG') }}" style="width:200px;height:50px;"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/create.PNG') }}" style="width:200px;height:50px;"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link"><img src="{{ url_for('static', filename='navigation/profile.PNG') }}" style="width:200px;height:50px;"></a></li>
-        </ul>
-    </header>
+    {% include "navbar.html" %}
     <div>
         <div id="board-keyboard-container">
             <img id="playboard" src="{{ url_for('static', filename='gamepage/playboard_withscore.PNG') }}" alt="board-asset">
@@ -34,38 +24,38 @@
             <div id="game-board"></div>
             <div id="keyboard-cont">
                 <div class="first-row">
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/q.PNG') }});background-size: cover;">q</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/w.PNG') }});background-size: cover;">w</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/e.PNG') }});background-size: cover;">e</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/r.PNG') }});background-size: cover;">r</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/t.PNG') }});background-size: cover;">t</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/y.PNG') }});background-size: cover;">y</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/u.PNG') }});background-size: cover;">u</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/i.PNG') }});background-size: cover;">i</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/o.PNG') }});background-size: cover;">o</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/p.PNG') }});background-size: cover;">p</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/q.PNG') }});">q</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/w.PNG') }});">w</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/e.PNG') }});">e</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/r.PNG') }});">r</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/t.PNG') }});">t</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/y.PNG') }});">y</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/u.PNG') }});">u</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/i.PNG') }});">i</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/o.PNG') }});">o</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/p.PNG') }});">p</button>
                 </div>
                 <div class="second-row">
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/a.PNG') }});background-size: cover;">a</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/s.PNG') }});background-size: cover;">s</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/d.PNG') }});background-size: cover;">d</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/f.PNG') }});background-size: cover;">f</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/g.PNG') }});background-size: cover;">g</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/h.PNG') }});background-size: cover;">h</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/j.PNG') }});background-size: cover;">j</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/k.PNG') }});background-size: cover;">k</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/l.PNG') }});background-size: cover;">l</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/a.PNG') }});">a</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/s.PNG') }});">s</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/d.PNG') }});">d</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/f.PNG') }});">f</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/g.PNG') }});">g</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/h.PNG') }});">h</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/j.PNG') }});">j</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/k.PNG') }});">k</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/l.PNG') }});">l</button>
                 </div>
                 <div class="third-row">
-                    <button class="keyboard-button-del">Del</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/z.PNG') }});background-size: cover;">z</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/x.PNG') }});background-size: cover;">x</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/c.PNG') }});background-size: cover;">c</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/v.PNG') }});background-size: cover;">v</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/b.PNG') }});background-size: cover;">b</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/n.PNG') }});background-size: cover;">n</button>
-                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/m.PNG') }});background-size: cover;">m</button>
-                    <button class="keyboard-button-enter">Enter</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/delKey.PNG') }});">Del</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/z.PNG') }});">z</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/x.PNG') }});">x</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/c.PNG') }});">c</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/v.PNG') }});">v</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/b.PNG') }});">b</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/n.PNG') }});">n</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/Original/m.PNG') }});">m</button>
+                    <button class="keyboard-button" style="background-image: url({{ url_for('static', filename='gamepage/keyboard/enterKey.PNG') }});background-size: 4rem 3rem;height: 3rem;width: 4rem;">Enter</button>
                 </div>
             </div>
         </div>
@@ -78,6 +68,7 @@
             </div>
         </ul>
     </div>
+    {% include "footer.html" %}
     {% block javascript %}
     <script>
         puzzle = JSON.parse({{ puzzle | tojson }})
