--- a/application/static/css/create_game.css
+++ b/application/static/css/create_game.css
@@ -1,69 +1,64 @@
-nav {
-    background-color: transparent;
-    padding: 10px;
-    position: fixed; 
-    width: 100%; 
-    top: 0; 
-
+body {
+    background-image: url('../background_score_list.png');
+    background-size: contain;
+    background-position: center;
 }
 
-ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-    padding: 0 20px; 
-    margin: 0; 
+nav {
+    position: fixed;
+    background-color: transparent;
+    width: 100%; 
 }
 
 .nav-home {
     margin-right: auto;
     background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
+    border-radius: 2px;
 }
 
 .nav-button {
-    margin-left: 20px;
+    margin-left: 5px;
     padding: 5px;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
 }
 
 header {
+    font-family: 'Comic Sans MS', sans-serif;
+    font-size: 2em;
+    color: #3b72ff;
     background-color: #d5f0fd;
     padding: 20px;
     text-align: center;
 }
 
-.content {
-    body {
-        font-family: Arial;
-        margin: 30px;
-        background-image: url('{{ url_for('static', filename='background_score_list.png') }}');
-        background-size: cover;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-    }
-
-    form {
-        background-color: rgba(242, 184, 147, 0.85);
-        padding: 20px;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        text-align: center;
-    }
+.content form{
+    background-color: rgba(242, 184, 147, 0.85);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 
     input[type="text"], input[type="number"] {
         width: 100%;
-        padding: 20px 20px;
+        padding: 40px 100px;
         margin: 8px 0;
         box-sizing: border-box;
         border: 1px solid #a6c5dc;
-        background-image: url('{{ url_for('static', filename='gamepage/commentboard.png') }}');
+        background-image: url('../gamepage/commentboard.png');
+        background-size: 100%;
         background-size: cover;
         background-position: center;
+    }
+
+    label {
+        font-family: 'Comic Sans MS', sans-serif;
+        font-size: 2em;
+        color: #3b72ff;
+    }
+
+    input[type="text"]::placeholder {
+        font-size: 2em; /* 使用 em 单位 */
     }
 
     button {
