--- a/application/templates/create_game.html
+++ b/application/templates/create_game.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="gray">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <title>Create Your Wordle Game</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/create_game.css') }}">
 </head>   
+
 <body   
     <nav>
         <ul style="list-style-type: none; display: flex;">
