--- a/application/static/css/create_game.css
+++ b/application/static/css/create_game.css
@@ -1,13 +1,19 @@
 body {
     background-image: url('../background_score_list.png');
-    background-size: contain;
+    background-size: cover;
     background-position: center;
 }
 
 nav {
-    position: fixed;
+    position: relative;
     background-color: transparent;
     width: 100%; 
+
+}
+
+ul.nav-list {
+    list-style-type: none;
+    display: flex;
 }
 
 .nav-home {
@@ -28,51 +34,53 @@ header {
     font-size: 2em;
     color: #3b72ff;
     background-color: #d5f0fd;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
 
-.content form{
+.content form {
+    width: 60%;
+    margin: 0 auto;
     background-color: rgba(242, 184, 147, 0.85);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+}
 
-    input[type="text"], input[type="number"] {
-        width: 100%;
-        padding: 40px 100px;
-        margin: 8px 0;
-        box-sizing: border-box;
-        border: 1px solid #a6c5dc;
-        background-image: url('../gamepage/commentboard.png');
-        background-size: 100%;
-        background-size: cover;
-        background-position: center;
-    }
+.content form input[type="text"],.content form input[type="number"] {
+    font-family: 'Comic Sans MS', sans-serif;
+    font-size: 2em;
+    width: 100%;
+    padding: 60px 100px;
+    margin: 0;
+    box-sizing: border-box;
+    background-image: url('../gamepage/commentboard.png');
+    background-size: cover;
+    background-position: center;
+    background-size: 100% 100%;
+}
 
-    label {
-        font-family: 'Comic Sans MS', sans-serif;
-        font-size: 2em;
-        color: #3b72ff;
-    }
+.content form input[type="text"]::placeholder,.content form input[type="number"]::placeholder {
+    font-family: 'Comic Sans MS', sans-serif;
+    font-size: 1em;
+}
+.content label{
+    font-family: 'Comic Sans MS', sans-serif;
+    font-size: 2em;
+}
 
-    input[type="text"]::placeholder {
-        font-size: 2em; /* 使用 em 单位 */
-    }
+.content button {
+    font-family: 'Comic Sans MS', sans-serif;
+    font-size: 2em;
+    background-color: #0095ff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 14px 20px;
+}
 
-    button {
-        width: calc(100% - 40px);
-        padding: 14px 20px;
-        background-color: #0095ff;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        position: relative;
-    }
-
-    button:hover {
-        background-color: #1f8925;
-    }
+.content button:hover {
+    background-color: #81d7ff;
 }
