--- a/application/templates/create_game.html
+++ b/application/templates/create_game.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/create_game.css') }}">
 </head>   
 
-<body   
+<body>  
     <nav>
-        <ul style="list-style-type: none; display: flex;">
+        <ul class="nav-list">
             <li class="nav-home"><a href="#"><img src="{{ url_for('static', filename='website_name_icon.png') }}" alt="Home Page"></a></li>
             <li class="nav-button"><a href="#"><img src="{{ url_for('static', filename='navigation/nav_puzzle.png') }}" alt="Puzzle"></a></li>
             <li class="nav-button"><a href="#"><img src="{{ url_for('static', filename='navigation/nav_score.png') }}" alt="Score"></a></li>
@@ -30,7 +30,7 @@
             <label for="form_number_of_attempts">How many attempts are allowed for your Wordle game:</label>
             <input type="number" name="form_number_of_attempts" placeholder="Please use a number" required><br><br>
 
-            <button type="submit">Submit and Create</button>
+            <button class="icon-button"><div class="icon"></div>Submit and Create</button>
         </form>
     </div>
 </body>
