--- a/application/static/css/profile.css
+++ b/application/static/css/profile.css
@@ -84,9 +84,13 @@ header nav ul {
   margin: 10px;
   height: 400px;
   display: flex;
-  justify-content: center;
   flex-grow: 1;
   box-sizing: border-box;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px; /* Optional: padding for the container */
+  overflow: auto; /* Makes overflow items scrollable */
+  white-space: nowrap; /* Prevents content from wrapping to test horizontal scrolling */
 }
 
 #solved,
@@ -97,13 +101,6 @@ header nav ul {
 
 #score {
   flex: 0.6 1 auto;
-}
-
-.panel h2 {
-  margin: 0;
-  position: relative;
-  display: flex;
-  top: 10%;
 }
 
 /**
@@ -122,7 +119,11 @@ header nav ul {
     height: 150px;
   }
 } */
-
+.logout{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 footer {
   width: 100%;
   padding: 10px 20px;
